# twitch_discord_moderation

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  docker-bake.hcl  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: bake.yml  ci.yml
docker/: Dockerfile
hooks/: build  pre_build
server/: Cargo.toml
server/src/: main.rs  subscriber.rs  util.rs  webhook.rs
src/: ci.rs  main.rs  subscriber.rs  util.rs  webhook.rs
xtask/: Cargo.toml
xtask/src/: main.rs  not_bash.rs
