[package]
name = "twitch-discord-moderation"
version = "0.5.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2021"
license = "MIT OR APACHE-2.0"
default-run = "twitch-discord-moderation"
readme = "README.md"
description = "Bot to send twitch moderator actions to a discord webhook"
publish = false
repository = "https://github.com/Emilgardis/twitch_discord_moderation"
build = "build.rs"
rust-version = "1.74"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
anyhow = "1.0.66"
chrono = "0.4.22"
owo-colors = "4"
dotenvy = "0.15.7"
twitch_api = { git = "https://github.com/twitch-rs/twitch_api.git", features = [
    "reqwest",
    "helix",
    "pubsub",
] }
async-tungstenite = { version = "0.25.1", features = ["tokio-native-tls"] }
reqwest = { version = "0.12.2", features = ["json"] }
url = "2.3.1"
futures = "0.3.25"
discord_webhook = { git = "https://github.com/thoo0224/webhook-rs", rev = "dc217e1fe", package = "webhook" }
humantime = "2.1.0"
serde = "1.0.147"
serde_json = "1.0.87"
fastrand = "1.8.0"
clap = { version = "4.0.18", features = ["derive", "env"] }
once_cell = "1.16.0"

[workspace]
members = ["xtask"]

[build-dependencies]
built = { version = "0.7.1", features = ["chrono", "git2"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[target.'cfg(all(not(any(target_os = "windows", target_os = "macos", target_os = "ios")), target_env = "musl"))'.dependencies]
#openssl = { version = "0.10.33", features = ["vendored"] }

[patch.crates-io]
#twitch_api = { path = "../twitch_api" }
#twitch_oauth2 = { git = "https://github.com/twitch-rs/twitch_api.git" }
twitch_api = { git = "https://github.com/twitch-rs/twitch_api.git" }
twitch_types = { git = "https://github.com/twitch-rs/twitch_api.git" }
#tungstenite = {path = "../tungstenite-rs"}
