[package]
name = "twitch-discord-moderation"
version = "0.6.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2021"
license = "MIT OR APACHE-2.0"
default-run = "twitch-discord-moderation"
readme = "README.md"
description = "Bot to send twitch moderator actions to a discord webhook"
publish = false
repository = "https://github.com/Emilgardis/twitch_discord_moderation"
build = "build.rs"
rust-version = "1.77"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
color-eyre = "0.6.3"
eyre = "0.6.12"
time = "0.3.37"
owo-colors = "4.1.0"
dotenvy = "0.15.7"
twitch_api = { version = "0.7.0", features = ["reqwest", "helix", "eventsub"] }
twitch_types = { version = "0.4.8", features = ["time"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
futures = "0.3.31"
discord_webhook = { git = "https://github.com/thoo0224/webhook-rs", rev = "dc217e1fe", package = "webhook" }
humantime = "2.1.0"
serde = "1.0.217"
serde_json = "1.0.138"
fastrand = "2.3.0"
clap = { version = "4.5.28", features = ["derive", "env"] }
once_cell = "1.20.3"

[workspace]
members = ["xtask"]

[build-dependencies]
built = { version = "0.7.6", features = ["chrono", "git2"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[target.'cfg(all(not(any(target_os = "windows", target_os = "macos", target_os = "ios")), target_env = "musl"))'.dependencies]
#openssl = { version = "0.10.33", features = ["vendored"] }

[patch.crates-io]
#twitch_api = { path = "../twitch_api" }
#twitch_oauth2 = { path = "../twitch_oauth2" }
#twitch_api = { git = "https://github.com/twitch-rs/twitch_api.git" }
#twitch_types = { git = "https://github.com/twitch-rs/twitch_api.git" }
twitch_oauth2 = { git = "https://github.com/twitch-rs/twitch_oauth2.git" }
#tungstenite = {path = "../tungstenite-rs"}
