[package]
name = "twitch-discord-moderation"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-appender = "0.1.1"
anyhow = "1.0.32"
chrono = "0.4.15"
ansi_term = "0.12.1"
dotenv = "*"
twitch_api2 = {version = "0.5.0-alpha.1", features = ["reqwest_client", "helix"]}
twitch_oauth2 = {version = "0.5.0-alpha.1", features = ["reqwest_client"]}
twitchchat = { version = "0.13.2", features = [
    "serde",
    "tokio",
    "native-tls",
    "tokio-util",
    "tokio-native-tls",
] }
async-tungstenite = { version = "0.8.0", features = ["tokio-native-tls"]}
reqwest = "0.10.8"
url = "2.1.1"
futures = "0.3.5"
discord_webhook = {version = "1.0.1", package = "webhook" }
humantime = "2.0.1"