[package]
name = "xtask"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
anyhow = "1.0.32"
fs-err = "2.3.0"
json = "0.12"

